# hw06-RuntingHan

./: Makefile  environment.yml  index.ipynb  setup.cfg
_build/html/: .buildinfo  README.html  Untitled.html  genindex.html  hw06-description.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  Untitled.doctree  environment.pickle  hw06-description.doctree  index.doctree
_build/html/_sources/: README.md
_build/jupyter_execute/: index.ipynb  index.py
ligotools/: utils.py
ligotools/tests/: test_readligo.py  tests_readligo.py
