[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Runting Han
author_email     = hrt@berkeley.edu
description      = A Python library for LIGO project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, LIGO
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7
install_requires =
	numpy
    scipy
    matplotlib
    h5py
    tqdm

[options.packages.find]
exclude =
    examples*
    docs*